# rust-programming-practice

./: .gitignore  README.md  git.sh  notes
axumlive-rest-api-project/: Cargo.toml  compose.yml  instructions.txt
axumlive-rest-api-project/migrations/: 0001_users_table.sql
control_flow/src/: main.rs
datatypes/src/: main.rs
functions/src/: main.rs
guessing_game/: guessing_game
guessing_game/src/: main.rs
hello_cargo/src/: main.rs
hello_program/src/: main.rs
hello_world/: main  main.rs
invalid_arrays/: Cargo.toml
invalid_arrays/src/: main.rs
ownership/src/: main.rs
practice/: que1  que1.rs  que10.rs  que11.rs  que12.rs  que2  que2.rs  que3  que3.rs  que4  que4.rs  que5.rs  que6.rs  que7.rs  que8.rs  que9.rs
practice/cargo_ship_challenge/: Cargo.toml
practice/cargo_ship_challenge/src/: main.rs
practice/cargo_ship_challenge_2/: Cargo.toml
practice/cargo_ship_challenge_2/src/: main.rs
practice/fibonacci/src/: main.rs
practice/temprature_conversion/: Cargo.toml
practice/temprature_conversion/src/: main.rs
variables/src/: main.rs
