[package]
name = "axumlive-rest-api-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
